Kudu deployment script to automate build on Azure

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,8 @@
 </head>
 <body>
   <app-root></app-root>
+  <br/>
+  <br/>
+  <span style="color: green; background-color: yellow;">Azure?</span>
 </body>
 </html>
