Added @angular/cli also as a production dependency as there's not other way to get it to my Azure web app machine.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
   <app-root></app-root>
   <br/>
   <br/>
-  <span style="color: green; background-color: yellow;">Azure?</span>
+  <span style="color: green; background-color: yellow; border: 3px solid red;">Azure?</span>
 </body>
 </html>
