--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>this is - Nebular</title>
+  <title>Nebular</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" href="./assets/styles/3rdParty/bootstrap.css?v=20180914">
+  <link rel="stylesheet" href="./assets/styles/page.css?v=20180914">
+
+  <script type="text/javascript" src="./assets/scripts/3rdParty/bootstrap.min.js?v=20180914"></script>
 </head>
 <body>
   <app-root></app-root>
-  <br/>
-  <br/>
-  <span style="color: green; background-color: yellow; border: 3px solid red;">Azure?</span>
 </body>
 </html>
